# magic

./: .gitignore  Makefile  README.md  app.py  app_test.py  data_test.csv  pyproject.toml
