[tool.poetry]
name = "magic"
version = "0.1.0"
description = "magic.link screening challenge"
authors = ["Hoanh An <hoanhan101@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
containerlog = "^0.3.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
